update openapi order & add controller order póst & get & logic discount
